--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -12,13 +12,14 @@ cmp<-read_csv(here("CMP.zip"))
 ```
 ```{r Cleaning}
 cmp<-cmp %>%
-  select(country,countryname,date,party,partyname,parfam,absseat,totseats,per109,per406,per601_2,rile) %>%
-  filter(date > "197999") %>%
-  group_by(country,date) %>%
-  mutate(mean_rile=mean(rile))
+  select(country,countryname,date,party,partyname,parfam,absseat,totseats,per109,per406,per608,per601,rile) %>% #109:internationalism_negative, 406:protectionism_positive,608:multiculturalism_negative,601:national_...
+  filter(date > "197999")
 cmp$nat<-ifelse(cmp$parfam=="70",1,0)
+cmp_simple<-cmp %>%
+  group_by(countryname,date) %>%
+  summarise(mean_rile=mean(rile),totnat=sum(nat))
 ```
-I need to find some way to assess the variation between countries whose political elite have responded to alleged dissatisfaction with globalization and those who have not responded (with new, nationalist parties emerging). Ideally would be looking fo.
+I need to find some way to assess the variation between countries whose political elite have responded to alleged dissatisfaction with globalization and those who have not responded (with new, nationalist parties emerging).
 ```{r Plot}
 rile<-ggplot(data=cmp, mapping = aes(x=date,y=mean_rile,group=country))+geom_line(aes(group = country))
 nat<-ggplot(data=cmp, mapping = aes(x=date,y=nat,group=country))+geom_col(aes(group=country))
