--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -24,5 +24,5 @@ cmp2 <- cmp %>%
   mutate(z=sum(per109+per406+per608+per601))
 cmp3<-cmp2%>% #the sum of "nationalist" platforms in a country-election
   group_by(countryname,date) %>%
-  summarise(countryname,date,y,z)
+  summarise(countryname,date,y,z) #need to "expand" and have one value for country-election pair
 ```
