--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -5,10 +5,11 @@ date: "1/26/2023"
 output: pdf_document
 ---
 ```{r Libraries, message=FALSE, warning=FALSE}
-library(here); library(tidyverse)
+library(here); library(readxl); library(tidyverse)
 ```
 ```{r Data, message=FALSE, warning=FALSE}
 cmp<-read_csv(here("CMP.zip"))
+wto<-read_xlsx(here("WtoData_20230208175246.xlsx"),skip = 1)
 ```
 ```{r Cleaning}
 cmp<-cmp %>%
@@ -22,9 +23,19 @@ cmp2 <- cmp %>% #building lg_anti
   mutate(lg_anti=ifelse(anti>1 & vote>10,1,0),lg_anti_natpar=ifelse(anti>1 & vote>10 & parfam==70,1,0))
 cmp3<-cmp2 %>% #cmp4 but with only countries with lg_anti and their party names (allows us to see what parties in cmp4)
   filter(lg_anti==1)
-cmp4<-cmp2 %>% #most condensed info, possibly table for paper
+cmp4<-cmp2 %>%
+  drop_na() %>%#most condensed info, possibly table for paper
   group_by(countryname) %>%
   summarise(lg_anti=sum(lg_anti),lg_anti_natpar=sum(lg_anti_natpar))
+#wto
+wto<-wto %>%
+  filter(`Product/Sector`=='SI3_AGG - TO - Total merchandise') %>%
+  pivot_longer("1979":"2021",values_to = "exports",names_to = "date") %>%
+  select(-`Partner Economy`,-`Product/Sector`) %>%
+  rename(countryname=`Reporting Economy`) %>%
+  mutate(date=as.numeric(date))
+data<-cmp %>%
+  left_join(wto,by=c("countryname","date"))
 ```
 
 May be able to argue that if `lg_anti` is 0, then incumbent political system has failed to respond to anti-globalist sentiment IF it exists.
@@ -36,12 +47,39 @@ Really trying to look at how these two items that are supposed to measure anti-g
 ```{r Graphs}
 graph<-function(country,party){
   title<-c(country, party)
-  cmp %>%
+  data %>%
   filter(countryname==country,partyname==party) %>%
   ggplot(aes(x=date)) +
     geom_line(aes(y=(per109+per608),color="anti")) +
     geom_line(aes(y=(pervote),color="vote")) +
+    geom_line(aes(y=((exports/1000)),color="exports")) +
     labs(title = paste0(c(title), collapse = ", "))
 }
+parties<-function(country){
+  cmp %>%
+    filter(date>1979,countryname==country) %>%
+    group_by(partyname) %>%
+    summarise(y=mean(pervote)) %>%
+    mutate(z=ifelse(y>5,1,0)) %>%
+    filter(z==1)
+}
+#austria
+parties('Austria')
 graph('Austria','Austrian Freedom Party')
+graph('Austria','Austrian People’s Party')
+#belgium
+parties('Belgium')
+graph('Belgium','Christian Democratic and Flemish')
+#canada no anti-globalist response?
+parties('Canada')
+graph('Canada','New Democratic Party')
+#portugal no anti-globalist response?
+parties('Portugal')
+graph('Portugal','Social Democratic Party')
+#spain no gloablist response?
+parties('Spain')
+graph('Spain',"People's Party")
+#south africa
+parties('South Africa')
+graph('South Africa','Democratic Alliance')
 ```
