--- a/626.bib
+++ b/626.bib
@@ -1,6 +1,40 @@
-@article{flahertyNA,
+@misc{colantone2018,
+  type = {SSRN Scholarly Paper},
+  title = {The {{Economic Determinants}} of the `{{Cultural Backlash}}': {{Globalization}} and {{Attitudes}} in {{Western Europe}}},
+  author = {Colantone, Italo and Stanig, Piero},
+  date = {2018-10-01},
+  number = {3267139},
+  location = {{Rochester, NY}},
+  doi = {10.2139/ssrn.3267139}
+}
+
+@online{flahertyNA,
   title = {Micro-{{Spatial Inequality}} and {{Redistribution}}: {{Evidence}} from the {{California Millionaires Tax Propositions}}},
   author = {Flaherty, Thomas M.},
   year = {NA},
   url = {https://www.thomasflaherty.com/research}
+}
+
+@article{guiso2017,
+  title = {Demand and {{Supply}} of {{Populism}}},
+  author = {Guiso, Luigi and Herrera, Helios and Morelli, Massimo and Sonno, Tommaso},
+  date = {2017-02},
+  journaltitle = {EIEF Working Papers Series},
+  series = {{{EIEF Working Papers Series}}},
+  number = {1703},
+  publisher = {{Einaudi Institute for Economics and Finance (EIEF)}},
+  url = {https://ideas.repec.org//p/eie/wpaper/1703.html},
+  urldate = {2023-02-12}
+}
+
+@article{walter2021,
+  title = {The {{Backlash Against Globalization}}},
+  author = {Walter, Stefanie},
+  date = {2021},
+  journaltitle = {Annual Review of Political Science},
+  volume = {24},
+  number = {1},
+  pages = {421--442},
+  doi = {10.1146/annurev-polisci-041719-102405},
+  annotation = {\_eprint: https://doi.org/10.1146/annurev-polisci-041719-102405}
 }
