--- a/626.bib
+++ b/626.bib
@@ -27,6 +27,15 @@
   urldate = {2023-02-12}
 }
 
+@dataset{lehmann2022,
+  title = {Manifesto {{Project Dataset}}},
+  author = {Lehmann, Pola and Burst, Tobias and Matthieß, Theres and Regel, Sven and Volkens, Andrea and Weßels, Bernhard and Zehnter, Lisa and Wissenschaftszentrum Berlin Für Sozialforschung (WZB)},
+  date = {2022},
+  publisher = {{Manifesto Project}},
+  doi = {10.25522/MANIFESTO.MPDS.2022A},
+  version = {2022a}
+}
+
 @article{walter2021,
   title = {The {{Backlash Against Globalization}}},
   author = {Walter, Stefanie},
